@@ -1,4 +1,5 @@
 monetdb
+Fabian Groffen <fabian@cwi.nl>
 Marcin Zukowski <marcin@cwi.nl>
 Arjan Scherpenisse <A.C.Scherpenisse@cwi.nl> (misc. contributions)
 Manfred Stienstra <manfred.stienstra@dwerg.net> (original version)
