@@ -1,0 +1,4 @@
+var a := new(void,void).seqbase(0@0).reverse().seqbase(0@0).append(0@0).append(1@0);
+a.print();
+a.find(0@0).print();
+a.find(1@0).print();
