@@ -1,0 +1,29 @@
+stdout of test 'find_first_on_void_void.SF-1505232` in directory 'tests/BugTracker` itself:
+
+
+# 09:56:06 >  
+# 09:56:06 >  Mtimeout -timeout 60 Mserver "--config=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/conf/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/plain/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/plain:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/contrib/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/contrib:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/calibrator/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/calibrator:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/mnetcdf/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/modules/mnetcdf:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/mapi/.libs:/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/src/mapi" --set "gdk_dbfarm=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/dbfarm" --set "sql_logdir=/ufs/sjoerd/src/MonetDB/devel/MonetDB/Linux/log" --set mapi_port=34374 --set monet_prompt= --trace --dbname=mTests_tests_BugTracker  < find_first_on_void_void.SF-1505232.milS
+# 09:56:06 >  
+
+# Monet Database Server V4.11.3
+# Copyright (c) 1993-2006, CWI. All rights reserved.
+# Compiled for x86_64-redhat-linux-gnu/64bit with 64bit OIDs; dynamically linked.
+# Visit http://monetdb.cwi.nl/ for further information.
+var a := new(void,void).seqbase(0@0).reverse().seqbase(0@0).append(0@0).append(1@0);
+a.print();
+#-----------------#
+# t	h	  # name
+# void	void	  # type
+#-----------------#
+[ 0@0,	  0@0	  ]
+[ 1@0,	  1@0	  ]
+a.find(0@0).print();
+[ 0@0 ]
+a.find(1@0).print();
+[ 1@0 ]
+quit();
+
+# 09:56:06 >  
+# 09:56:06 >  Done.
+# 09:56:06 >  
+
